--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -33,3 +33,6 @@ jobs:
       
       - name: 'Push to Google Artifact Registry'
         run: gcloud builds submit --tag europe-west9-docker.pkg.dev/notedly-451520/notely-ar-repo/notely:latest .
+
+      - name: Deploy to Cloud Run
+        run: gcloud run deploy notely --image europe-west9-docker.pkg.dev/notedly-451520/notely-ar-repo/notely:latest --region europe-west9 --allow-unauthenticated --project notedly-451520 --max-instances=4
