--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,6 +8,8 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -33,6 +35,12 @@ jobs:
       
       - name: 'Push to Google Artifact Registry'
         run: gcloud builds submit --tag europe-west9-docker.pkg.dev/notedly-451520/notely-ar-repo/notely:latest .
+
+      - name: 'Install goose'
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest
+
+      - name: 'Run db migrations'
+        run: sh ./scripts/migrateup.sh
 
       - name: Deploy to Cloud Run
         run: gcloud run deploy notely --image europe-west9-docker.pkg.dev/notedly-451520/notely-ar-repo/notely:latest --region europe-west9 --allow-unauthenticated --project notedly-451520 --max-instances=4
